--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -1,12 +1,12 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "queda $${0}"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1 día"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1 hora"
   },
   "about": {
     "message": "Acerca de"
@@ -35,7 +35,7 @@
     "message": "Todas las ventanas emergentes"
   },
   "always": {
-    "message": "Always"
+    "message": "Siempre"
   },
   "anti_tracking": {
     "message": "Antirrastreadores"
@@ -47,7 +47,7 @@
     "message": "Aplicar ajustes de privacidad óptimos:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "¿Seguro que quieres desactivar la vista previa de rastreadores?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "¿Seguro que quieres omitir la activación de Ghostery?"
@@ -79,7 +79,7 @@
     "message": "Consulta las preguntas frecuentes de <a href=\"$${0}\" target=\"_blank\"> </a> o escríbenos a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Estaremos encantados de hablar contigo."
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "Limpiar todo"
   },
   "comments": {
     "message": "Comentarios",
@@ -90,16 +90,16 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "Contacto"
   },
   "contact_support": {
-    "message": "Contact support"
+    "message": "Contacta con asistencia"
   },
   "continue": {
     "message": "Continuar"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "Copiado al portapapeles"
   },
   "customer_interaction": {
     "message": "Interacción con el cliente",
@@ -109,13 +109,13 @@
     "message": "Vista detallada"
   },
   "disable": {
-    "message": "Disable"
+    "message": "Deshabilitar"
   },
   "disable_trackers_preview": {
     "message": "Deshabilitar vista previa de rastreadores"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "Deshabilitado"
   },
   "done": {
     "message": "Hecho"
@@ -157,13 +157,13 @@
     "message": "Ghostery habilitado"
   },
   "ghostery_has_been_resumed_on_this_site_": {
-    "message": "Ghostery has been resumed on this site."
+    "message": "Ghostery se ha reanudado en este sitio."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "Ghostery no tiene nada que hacer en esta página"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "Ghostery está en pausa en este sitio."
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "¡Ghostery está listo para detener a los rastreadores y proteger tu privacidad mientras navegas!"
@@ -171,20 +171,23 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghostery detiene a los rastreadores en su camino y evita que se elaboren perfiles y se venda tu información personal a los corredores de datos."
   },
+  "ghostery_paused": {
+    "message": "Ghostery paused"
+  },
   "ghostery_privacy_policy": {
     "message": "Política de privacidad de Ghostery"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Ajustes de Ghostery"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghostery se pausará en este sitio. Esto se puede cambiar en cualquier momento en la configuración de Ghostery para evitar que los rastreadores y los anuncios te rastreen en la web"
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "Ghostery se pausará en este sitio durante 1 día"
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "Ghostery se pausará en este sitio durante 1 hora"
   },
   "hosting": {
     "message": "Hosting",
@@ -209,10 +212,10 @@
     "message": "Ghostery es una potente extensión para tu privacidad. Bloquea anuncios, detiene rastreadores y acelera sitios web."
   },
   "menu": {
-    "message": "Menu"
+    "message": "Menú"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "Ten en cuenta que no todas las entidades enumeradas son rastreadoras; es decir, que no todas recopilan datos personales"
   },
   "miscellaneous": {
     "message": "Miscelánea",
@@ -237,7 +240,7 @@
     "message": "No"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "No se detectaron rastreadores"
   },
   "off": {
     "message": "No"
@@ -257,11 +260,14 @@
   "on_this_website": {
     "message": "en este sitio web"
   },
+  "pause_on_this_site": {
+    "message": "Pause on this site"
+  },
   "paused": {
-    "message": "Paused"
+    "message": "Pausado"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "Se requiere permiso"
   },
   "privacy_policy": {
     "message": "política de privacidad"
@@ -270,10 +276,10 @@
     "message": "Política de privacidad"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "Protección de la privacidad"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "Leer más sobre WhoTracks.Me"
   },
   "report_a_broken_page": {
     "message": "Informar página rota"
@@ -282,7 +288,7 @@
     "message": "Reactivar"
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "Buscar sitio web..."
   },
   "settings": {
     "message": "Ajustes"
@@ -321,10 +327,10 @@
     "message": "Rastreadores"
   },
   "trackers_count": {
-    "message": "Trackers Count"
+    "message": "Número de rastreadores"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "Rastreadores detectados"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Rastreadores detectados por Ghostery en esta página web:&nbsp;$${0}"
@@ -333,10 +339,10 @@
     "message": "Vista previa de rastreadores"
   },
   "trackers_wheel": {
-    "message": "Trackers Wheel"
+    "message": "Rueda de rastreadores"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "Prueba a abrir este panel en una pestaña diferente del navegador"
   },
   "unblocked": {
     "message": "Desbloqueado"
@@ -346,13 +352,10 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "Sitio web"
   },
   "websites": {
-    "message": "Websites"
+    "message": "Sitios web"
   },
   "welcome_to_ghostery": {
     "message": "Bienvenido a Ghostery"
@@ -364,10 +367,10 @@
     "message": "WhoTracks.Me, operado por Ghostery, es una parte integral de la tecnología anti-seguimiento de Ghostery. Es un recurso global completo sobre rastreadores, que aporta transparencia al rastreo web."
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "Informe estadístico de WhoTracks.Me"
   },
   "whotracks_me_wheel": {
-    "message": "WhoTracks.Me Wheel"
+    "message": "Rueda de WhoTracks.Me"
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Con Ghostery activado, navegas instantáneamente por la web de forma más segura, más rápida y con menos anuncios molestos."
@@ -388,6 +391,6 @@
     "message": "¡Ya estás a punto, ghosteriniano/a!"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "Ya no verás las ruedas de los rastreadores junto a los resultados de búsqueda."
   }
 }
