--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -1,12 +1,12 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "$${0} rimasti"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1 giorno"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1 ora"
   },
   "about": {
     "message": "A proposito di"
@@ -35,7 +35,7 @@
     "message": "Tutti i popup"
   },
   "always": {
-    "message": "Always"
+    "message": "Sempre"
   },
   "anti_tracking": {
     "message": "Anti-Tracking"
@@ -47,7 +47,7 @@
     "message": "Applica impostazioni ottimali per la privacy:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "Disattivare l'anteprima dei tracker?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Sicuro di non voler abilitare Ghostery?"
@@ -79,7 +79,7 @@
     "message": "Consulta le FAQ di <a href=\"$${0}\" target=\"_blank\"> </a> o scrivici a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Saremo più che felici di parlare con te!"
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "Cancella tutto"
   },
   "comments": {
     "message": "Commenti",
@@ -90,16 +90,16 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "Contatti"
   },
   "contact_support": {
-    "message": "Contact support"
+    "message": "Contatta l'assistenza"
   },
   "continue": {
     "message": "Continua"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "Copiato negli appunti"
   },
   "customer_interaction": {
     "message": "Interazione Cliente",
@@ -109,13 +109,13 @@
     "message": "Vista Dettagliata"
   },
   "disable": {
-    "message": "Disable"
+    "message": "Disattiva"
   },
   "disable_trackers_preview": {
     "message": "Disattiva anteprima Tracker"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "Disattivato"
   },
   "done": {
     "message": "Fatto"
@@ -157,13 +157,13 @@
     "message": "Ghostery abilitato"
   },
   "ghostery_has_been_resumed_on_this_site_": {
-    "message": "Ghostery has been resumed on this site."
+    "message": "Ghostery è stato ripristinato su questo sito."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "Ghostery non ha nulla a che fare con questa pagina"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "Ghostery è in pausa su questo sito."
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery è impostato per bloccare i tracker e proteggere la tua privacy durante la navigazione!"
@@ -171,20 +171,23 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghostery blocca i tracker e impedisce che tu venga profilato e che le tue informazioni personali vengano vendute agli intermediari di dati."
   },
+  "ghostery_paused": {
+    "message": "Ghostery paused"
+  },
   "ghostery_privacy_policy": {
     "message": "Informativa sulla Privacy di Ghostery"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Impostazioni Ghostery"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghostery sarà messo in pausa su questo sito. È possibile modificare questa impostazione in qualsiasi momento nelle impostazioni di Ghostery per impedire ai tracker e agli annunci di tracciare l'utente sul web."
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "Ghostery sarà messo in pausa su questo sito per 1 giorno"
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "Ghostery sarà messo in pausa su questo sito per 1 ora"
   },
   "hosting": {
     "message": "Hosting",
@@ -212,7 +215,7 @@
     "message": "Menu"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "Si tenga presente che non tutte le entità elencate sono tracker, cioè non tutte raccolgono dati personali"
   },
   "miscellaneous": {
     "message": "Varie",
@@ -237,7 +240,7 @@
     "message": "No"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "Nessun tracker rilevato"
   },
   "off": {
     "message": "Disattivato"
@@ -257,11 +260,14 @@
   "on_this_website": {
     "message": "su questo sito web"
   },
+  "pause_on_this_site": {
+    "message": "Pause on this site"
+  },
   "paused": {
-    "message": "Paused"
+    "message": "In pausa"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "Autorizzazione richiesta"
   },
   "privacy_policy": {
     "message": "informativa sulla privacy"
@@ -270,10 +276,10 @@
     "message": "Informativa sulla privacy"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "Protezione della privacy"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "Scopri di più su WhoTracks.Me"
   },
   "report_a_broken_page": {
     "message": "Segnala una pagina orfana"
@@ -282,7 +288,7 @@
     "message": "Riattiva"
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "Ricerca sito web..."
   },
   "settings": {
     "message": "Impostazioni"
@@ -321,10 +327,10 @@
     "message": "Tracker"
   },
   "trackers_count": {
-    "message": "Trackers Count"
+    "message": "Conteggio tracker"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "Tracker rilevati"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Tracker rilevati da Ghostery su questo sito web:&nbsp;$${0}"
@@ -333,10 +339,10 @@
     "message": "Anteprima Tracker"
   },
   "trackers_wheel": {
-    "message": "Trackers Wheel"
+    "message": "Ruota tracker"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "Prova ad aprire questo pannello in un'altra scheda del browser"
   },
   "unblocked": {
     "message": "Sbloccati"
@@ -346,13 +352,10 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "Sito web"
   },
   "websites": {
-    "message": "Websites"
+    "message": "Siti web"
   },
   "welcome_to_ghostery": {
     "message": "Benvenuto in Ghostery"
@@ -364,10 +367,10 @@
     "message": "WhoTracks.Me, gestito da Ghostery, è parte integrante della tecnologia anti-tracciamento AI di Ghostery. Si tratta di una risorsa globale completa sui tracker, che porta trasparenza al tracciamento sul web."
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "Rapporto statistico WhoTracks.Me"
   },
   "whotracks_me_wheel": {
-    "message": "WhoTracks.Me Wheel"
+    "message": "Ruota whotracks.me?"
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Con Ghostery attivato navighi sul web in modo più sicuro, più veloce e con meno annunci fastidiosi."
@@ -388,6 +391,6 @@
     "message": "Tutto pronto, Ghosterian!"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "Non vedrai più le ruote del tracker vicino ai risultati della ricerca."
   }
 }
