--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -1,12 +1,12 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "$${0} 残"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1日"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1時間"
   },
   "about": {
     "message": "バージョン情報"
@@ -35,7 +35,7 @@
     "message": "すべてのポップアップ"
   },
   "always": {
-    "message": "Always"
+    "message": "常に"
   },
   "anti_tracking": {
     "message": "追跡防止"
@@ -47,7 +47,7 @@
     "message": "最適なプライバシー設定を適用:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "Trackers Previewを無効にしてもよいですか？"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "本当にGhosteryを有効にしなくてもいいのですか？"
@@ -79,7 +79,7 @@
     "message": "<a href=\"$${0}\" target=\"_blank\">FAQs</a> を確認するか、<a href=\"mailto:$${1}\">$${2}</a>までお問い合わせください。 <br/> ぜひ、ご相談ください。"
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "すべてクリア"
   },
   "comments": {
     "message": "コメント",
@@ -90,16 +90,16 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "お問い合わせ"
   },
   "contact_support": {
-    "message": "Contact support"
+    "message": "お問い合わせ先"
   },
   "continue": {
     "message": "継続"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "クリップボードにコピー済み"
   },
   "customer_interaction": {
     "message": "顧客インタラクション",
@@ -109,13 +109,13 @@
     "message": "詳細ビュー"
   },
   "disable": {
-    "message": "Disable"
+    "message": "無効化"
   },
   "disable_trackers_preview": {
     "message": "トラッカーの無効化プレビュー"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "無効化済み"
   },
   "done": {
     "message": "完了"
@@ -157,13 +157,13 @@
     "message": "Ghosteryが有効化"
   },
   "ghostery_has_been_resumed_on_this_site_": {
-    "message": "Ghostery has been resumed on this site."
+    "message": "Ghosteryがこのサイトで再開されました。"
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "Ghosteryは、このページでは何もしません。"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "Ghosteryは、このサイトで一時停止しています。"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するように設定されています!"
@@ -171,20 +171,23 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られることを防いでいます。"
   },
+  "ghostery_paused": {
+    "message": "Ghostery paused"
+  },
   "ghostery_privacy_policy": {
     "message": "Ghosteryプライバシー・ポリシー"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Ghostery 設定"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghosteryは、このサイトで一時停止されます。 この設定は、Ghosteryの設定でいつでも変更でき、トラッカーや広告がウェブ上であなたを追跡するのを阻止することができます。"
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "Ghosteryは、このサイトで1日間停止されます。"
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "Ghosteryは、このサイトで1時間停止します。"
   },
   "hosting": {
     "message": "ホスティング",
@@ -209,10 +212,10 @@
     "message": "Ghosteryは強力なプライバシー拡張機能です。広告をブロックし、トラッカーを阻止し、ウェブサイトを高速化します。"
   },
   "menu": {
-    "message": "Menu"
+    "message": "メニュー"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "すべての事業者がトラッカーではないこと、すなわち、すべての事業者が個人情報を収集するわけではないことにご留意ください。"
   },
   "miscellaneous": {
     "message": "さまざまな",
@@ -237,7 +240,7 @@
     "message": "いいえ"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "トラッカーは検出されませんでした"
   },
   "off": {
     "message": "オフ"
@@ -257,11 +260,14 @@
   "on_this_website": {
     "message": "このウェブサイトに対して"
   },
+  "pause_on_this_site": {
+    "message": "Pause on this site"
+  },
   "paused": {
-    "message": "Paused"
+    "message": "一時停止"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "許可が必要"
   },
   "privacy_policy": {
     "message": "プライバシー・ポリシー"
@@ -270,10 +276,10 @@
     "message": "プライバシー・ポリシー"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "プライバシー保護"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "WhoTracks.Meで詳細を見る"
   },
   "report_a_broken_page": {
     "message": "区切られたページを報告"
@@ -282,7 +288,7 @@
     "message": "再開"
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "サイトを検索..."
   },
   "settings": {
     "message": "設定"
@@ -321,10 +327,10 @@
     "message": "トラッカー"
   },
   "trackers_count": {
-    "message": "Trackers Count"
+    "message": "トラッカーカウント"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "検出されたトラッカー"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "このウェブサイト上でGhosteryがトラッカーを検出:&nbsp;$${0}"
@@ -333,10 +339,10 @@
     "message": "トラッカーのプレビュー"
   },
   "trackers_wheel": {
-    "message": "Trackers Wheel"
+    "message": "トラッカーホイール"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "このパネルを別のブラウザのタブで開いてください"
   },
   "unblocked": {
     "message": "ブロックされていない対象"
@@ -346,13 +352,10 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "ウェブサイト"
   },
   "websites": {
-    "message": "Websites"
+    "message": "ウェブサイト"
   },
   "welcome_to_ghostery": {
     "message": "Ghosteryをご利用いただきありがとうございます"
@@ -364,7 +367,7 @@
     "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "WhoTracks.Me統計レポート"
   },
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me Wheel"
@@ -388,6 +391,6 @@
     "message": "Ghosteryの仲間として、これで大丈夫です!"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "検索結果の横にトラッカーホイールが表示されなくなります。"
   }
 }
