--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -1,12 +1,12 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "$${0} 남음"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1일"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1시간"
   },
   "about": {
     "message": "정보 "
@@ -35,7 +35,7 @@
     "message": "팝업 전체"
   },
   "always": {
-    "message": "Always"
+    "message": "항상 "
   },
   "anti_tracking": {
     "message": "추적 방지 "
@@ -47,7 +47,7 @@
     "message": "최적의 개인 정보 설정 적용:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "트래커 미리보기를 비활성화하시겠습니까?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Ghostery 활성화를 건너뛰시겠습니까?"
@@ -79,7 +79,7 @@
     "message": "<a href=\"$${0}\" target=\"_blank\">FAQ</a>을 확인해 보시거나 <a href=\"mailto:$${1}\">$${2}</a>로 연락 주십시오. <br/> 어떤 문의든 궁금하신 점이 있으면 저희에게 연락해 주십시오!"
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "모두 지우기"
   },
   "comments": {
     "message": "댓글",
@@ -90,16 +90,16 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "연락처 "
   },
   "contact_support": {
-    "message": "Contact support"
+    "message": "연락 지원 "
   },
   "continue": {
     "message": "계속"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "클립보드에 복사됨"
   },
   "customer_interaction": {
     "message": "고객 응대 ",
@@ -109,13 +109,13 @@
     "message": "자세히 보기 "
   },
   "disable": {
-    "message": "Disable"
+    "message": "비활성화 "
   },
   "disable_trackers_preview": {
     "message": "트래커 미리보기 끄기"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "비활성화됨"
   },
   "done": {
     "message": "완료"
@@ -157,13 +157,13 @@
     "message": "Ghostery 활성화됨"
   },
   "ghostery_has_been_resumed_on_this_site_": {
-    "message": "Ghostery has been resumed on this site."
+    "message": "이 사이트에서 Ghostery가 재개되었습니다."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "이 사이트에서는 Ghostery가 할 일이 없습니다. "
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "이 사이트에서 Ghostery가 일시 중지되었습니다. "
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery는 인터넷 탐색 중 트래커의 추적을 중단하고 사용자의 개인정보를 보호하도록 설정되었습니다!"
@@ -171,20 +171,23 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghostery는 트래커의 추적을 중단하고 사용자가 프로파일링되는 것을 방지하여 트래커가 사용자의 개인 정보를 데이터 브로커에게 판매하지 못하게 합니다."
   },
+  "ghostery_paused": {
+    "message": "Ghostery paused"
+  },
   "ghostery_privacy_policy": {
     "message": "Ghostery 개인정보 취급방침"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Ghostery 설정 "
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "이 사이트에서 Ghostery가 일시 중지될 것입니다. 언제든지 마음을 바꾸어 Ghostery 설정에서 트래커와 광고가 웹에서 귀하를 추적하는 것을 중단하게 할 수 있습니다."
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "이 사이트에서 Ghostery가 1일 간 일시 중지될 것입니다."
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "이 사이트에서 Ghostery가 1시간 동안 일시 중지될 것입니다."
   },
   "hosting": {
     "message": "호스팅",
@@ -209,10 +212,10 @@
     "message": "Ghostery는 강력한 개인정보 보호 확장 프로그램입니다. 광고와 트래커를 차단하고 웹 사이트의 속도를 높여줍니다."
   },
   "menu": {
-    "message": "Menu"
+    "message": "메뉴"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "열거된 모든 엔터티가 트래커는 아니며 모든 엔터티가 개인 데이터를 수집하는 것은 아닙니다."
   },
   "miscellaneous": {
     "message": "기타",
@@ -237,7 +240,7 @@
     "message": "아니요"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "트래커 감지되지 않음"
   },
   "off": {
     "message": "끄기 "
@@ -257,11 +260,14 @@
   "on_this_website": {
     "message": "이 웹사이트에서"
   },
+  "pause_on_this_site": {
+    "message": "Pause on this site"
+  },
   "paused": {
-    "message": "Paused"
+    "message": "일시 중지됨"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "권한 필요"
   },
   "privacy_policy": {
     "message": "개인정보 취급방침"
@@ -270,10 +276,10 @@
     "message": "개인정보 취급방침"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "개인정보 보호"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "WhoTracks.Me 자세히 보기"
   },
   "report_a_broken_page": {
     "message": "깨진 페이지 보고 "
@@ -282,7 +288,7 @@
     "message": "다시 시작 "
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "웹사이트 검색..."
   },
   "settings": {
     "message": "설정 "
@@ -321,10 +327,10 @@
     "message": "트래커 "
   },
   "trackers_count": {
-    "message": "Trackers Count"
+    "message": "트래커 카운트"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "트래커 감지됨"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "이 웹사이트에서 Ghostery가 탐지한 추적기:&nbsp;$${0}"
@@ -333,10 +339,10 @@
     "message": "트래커 미리보기"
   },
   "trackers_wheel": {
-    "message": "Trackers Wheel"
+    "message": "트래커 휠"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "다른 브라우저 탭에서 이 패널 열기 시도"
   },
   "unblocked": {
     "message": "차단 해제됨 "
@@ -346,13 +352,10 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "웹사이트"
   },
   "websites": {
-    "message": "Websites"
+    "message": "웹사이트"
   },
   "welcome_to_ghostery": {
     "message": "Ghostery를 시작합니다"
@@ -364,10 +367,10 @@
     "message": "Ghostery가 운영하는 WhoTracks.Me는 Ghostery의 AI 추적 방지 기술을 필수 부분으로 작동합니다. 이는 트래커에 대한 가장 포괄적인 글로벌 리소스로서 웹 추적에 투명성을 가져다 줍니다."
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "WhoTracks.Me 통계 보고서 "
   },
   "whotracks_me_wheel": {
-    "message": "WhoTracks.Me Wheel"
+    "message": "WhoTracks.Me 휠 "
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Ghostery를 사용하면 웹을 즉시 보다 안전하고 빠르게 탐색할 수 있으며 성가신 광고들도 줄어들게 됩니다."
@@ -388,6 +391,6 @@
     "message": "모두 준비가 되었습니다, Ghosterian!"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "검색 결과 옆의 트래커 휠이 더 이상 표시되지 않습니다."
   }
 }
