--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -1,12 +1,12 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "pozostało $${0}"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1 dzień"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1 godzina"
   },
   "about": {
     "message": "O nas"
@@ -35,7 +35,7 @@
     "message": "Wszystkie okienka typu Pop-up"
   },
   "always": {
-    "message": "Always"
+    "message": "Zawsze"
   },
   "anti_tracking": {
     "message": "Ochrona przed śledzeniem"
@@ -47,7 +47,7 @@
     "message": "Zastosuj optymalne ustawienia prywatności:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "Jesteś pewny, że checz wyłączyć Podgląd Trakerów?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Na pewno chcesz pominąć aktywację Ghostery?"
@@ -79,7 +79,7 @@
     "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\"> FAQ </a> lub napisz do nas na <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Będziemy bardziej niż szczęśliwi, aby porozmawiać z tobą!"
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "Wyczyść wszystkie"
   },
   "comments": {
     "message": "Komentarze",
@@ -90,7 +90,7 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "Kontakt"
   },
   "contact_support": {
     "message": "Contact support"
@@ -99,7 +99,7 @@
     "message": "Kontynuuj"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "Skopiowano do schowka"
   },
   "customer_interaction": {
     "message": "Interakcja z klientem",
@@ -109,13 +109,13 @@
     "message": "Widok szczegółowy"
   },
   "disable": {
-    "message": "Disable"
+    "message": "Wyłącz"
   },
   "disable_trackers_preview": {
     "message": "Wyłącz podgląd trackerów"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "Wyłączone"
   },
   "done": {
     "message": "Gotowe"
@@ -160,10 +160,10 @@
     "message": "Ghostery has been resumed on this site."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "Ghostery nie ma co robić na tej stronie"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "Ghostery jest wstrzymane na tej stronie."
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery działa tak, aby zatrzymać trackery podczas ich śledzenia i ochronić Twoją prywatność podczas przeglądania internetu!"
@@ -171,20 +171,23 @@
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
     "message": "Ghostery zatrzymuje trackery na ich drodze i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych."
   },
+  "ghostery_paused": {
+    "message": "Ghostery paused"
+  },
   "ghostery_privacy_policy": {
     "message": "Polityka prywatności Ghostery"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Ustawienia Ghostery"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghostery będzie wstrzymane na tej stronie. Możesz to zmienić w dowolnym momencie w Ustawieniach Ghostery, aby zatrzymać trackery i reklamy przed śledzeniem Cię w sieci."
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "Ghostery będzie wstrzymane na tej stronie przez 1 dzień"
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "Ghostery będzie wstrzymane na tej stronie przez 1 godzinę"
   },
   "hosting": {
     "message": "Hosting",
@@ -237,7 +240,7 @@
     "message": "Nie"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "Nie wykryto trackerów"
   },
   "off": {
     "message": "Wył."
@@ -257,11 +260,14 @@
   "on_this_website": {
     "message": "na tej stronie"
   },
+  "pause_on_this_site": {
+    "message": "Pause on this site"
+  },
   "paused": {
-    "message": "Paused"
+    "message": "wstrzymane"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "Wymagane uprawnienia"
   },
   "privacy_policy": {
     "message": "polityka prywatności"
@@ -270,10 +276,10 @@
     "message": "Polityka prywatności"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "Ochrona prywatności"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "Czytaj więcej na WhoTracks.Me"
   },
   "report_a_broken_page": {
     "message": "Zgłoś uszkodzoną stronę"
@@ -282,7 +288,7 @@
     "message": "Wznów"
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "Szukaj strony..."
   },
   "settings": {
     "message": "Ustawienia"
@@ -324,7 +330,7 @@
     "message": "Trackers Count"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "Wykryte trackery"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Ghostery wykrył trackery śledzące na tej stronie:&nbsp;$${0}"
@@ -336,7 +342,7 @@
     "message": "Trackers Wheel"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "Spróbuj otworzyć ten panel na innej karcie przeglądarki"
   },
   "unblocked": {
     "message": "Odblokowane"
@@ -346,13 +352,10 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "Strona internetowa"
   },
   "websites": {
-    "message": "Websites"
+    "message": "Strony internetowe"
   },
   "welcome_to_ghostery": {
     "message": "Witamy w Ghostery"
@@ -364,7 +367,7 @@
     "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "Raport statystyczny WhoTracks.Me"
   },
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me Wheel"
