--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -1,27 +1,27 @@
 {
   "@_0__left": {
-    "message": "$${0} left"
+    "message": "還剩 $${0}"
   },
   "1_day": {
-    "message": "1 day"
+    "message": "1 天"
   },
   "1_hour": {
-    "message": "1 hour"
+    "message": "1 小時"
   },
   "about": {
     "message": "有關"
   },
   "accept_terms": {
-    "message": "Accept terms"
+    "message": "接受條款"
   },
   "ad_blocking": {
     "message": "廣告封鎖"
   },
   "additional_permissions_required": {
-    "message": "Additional Permissions Required"
+    "message": "需要額外的權限"
   },
   "ads___onboarding": {
-    "message": "Ads"
+    "message": "廣告"
   },
   "adult_advertising": {
     "message": "成人廣告",
@@ -32,25 +32,25 @@
     "description": "Tracker category name"
   },
   "all_popups": {
-    "message": "All Popups"
+    "message": "所有彈出式視窗"
   },
   "always": {
-    "message": "Always"
+    "message": "永遠"
   },
   "anti_tracking": {
     "message": "反跟蹤"
   },
   "any_questions__anytime_": {
-    "message": "Any questions? Anytime!"
+    "message": "有任何問題嗎？ 隨時提問！"
   },
   "apply_optimal_privacy_settings_": {
-    "message": "Apply optimal privacy settings:"
+    "message": "套用最佳隱私權設定："
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "你確定要停用「追蹤器預覽」嗎？"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Are you sure you want to skip enabling Ghostery?"
+    "message": "你確定要跳過啟用 Ghostery 嗎？"
   },
   "audio_video_player": {
     "message": "音訊/視訊播放器",
@@ -60,13 +60,13 @@
     "message": "返回"
   },
   "become_a_contributor": {
-    "message": "Become a Contributor"
+    "message": "成為捐助者"
   },
   "blocked": {
     "message": "已封鎖"
   },
   "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
-    "message": "By using Never-Consent you let website owners know that you’re against tracking!"
+    "message": "使用 Never-Consent，你可以讓網站擁有者知道你反對追蹤！"
   },
   "cancel": {
     "message": "取消"
@@ -76,30 +76,30 @@
     "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:$${1}\">$${2}</a>. <br/> We'll be more than happy to talk to you!"
+    "message": "查看<a href=\"$${0}\" target=\"_blank\">常見問題集</a>或寄電子郵件至 <a href=\"mailto:$${1}\">$${2}</a>。 <br/> 我們非常樂意與你聯絡！"
   },
   "clear_all": {
-    "message": "Clear all"
+    "message": "全部清除"
   },
   "comments": {
     "message": "評論",
     "description": "Tracker category name"
   },
   "consent_management": {
-    "message": "Consent Management",
+    "message": "同意管理",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "聯絡我們"
   },
   "contact_support": {
-    "message": "Contact support"
+    "message": "聯絡支援"
   },
   "continue": {
-    "message": "Continue"
+    "message": "繼續"
   },
   "copied_to_clipboard": {
-    "message": "Copied to clipboard"
+    "message": "複製到剪貼簿"
   },
   "customer_interaction": {
     "message": "客戶互動",
@@ -109,32 +109,32 @@
     "message": "詳細圖示"
   },
   "disable": {
-    "message": "Disable"
+    "message": "停用"
   },
   "disable_trackers_preview": {
-    "message": "Disable Trackers Preview"
+    "message": "停用「追蹤器預覽」"
   },
   "disabled": {
-    "message": "Disabled"
+    "message": "已停用"
   },
   "done": {
     "message": "完成"
   },
   "done__go_with_ghosty_": {
-    "message": "Done! Go with Ghosty!"
+    "message": "完成！ 跟 Ghosty 一起去！"
   },
   "email": {
     "message": "電郵",
     "description": "Tracker category name"
   },
   "enable_ghostery": {
-    "message": "Enable Ghostery"
+    "message": "啟用 Ghostery"
   },
   "enable_ghostery_to_get_started": {
-    "message": "Enable Ghostery to get started"
+    "message": "啟用 Ghostery 開始"
   },
   "enable_never_consent_": {
-    "message": "Enable Never-Consent?"
+    "message": "啟用 Never-Consent？"
   },
   "enabled": {
     "message": "已啟用"
@@ -148,59 +148,62 @@
     "description": "Tracker category name"
   },
   "for_more_information_read_our_full": {
-    "message": "For more information read our full"
+    "message": "如欲了解更多訊息，請閱讀我們的全文"
   },
   "ghostery_disabled": {
-    "message": "Ghostery disabled"
+    "message": "Ghostery 已停用"
   },
   "ghostery_enabled": {
-    "message": "Ghostery enabled"
+    "message": "Ghostery 已啟用"
   },
   "ghostery_has_been_resumed_on_this_site_": {
-    "message": "Ghostery has been resumed on this site."
+    "message": "Ghostery 已在此網站上恢復。"
   },
   "ghostery_has_nothing_to_do_on_this_page": {
-    "message": "Ghostery has nothing to do on this page"
+    "message": "Ghostery 與此頁面無關"
   },
   "ghostery_is_paused_on_this_site_": {
-    "message": "Ghostery is paused on this site."
+    "message": "Ghostery 已在此網站上暫停。"
   },
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery is set up to stop trackers in their tracks and protect your privacy while browsing!"
+    "message": "Ghostery 的設置是為了在其追蹤中制止追蹤器並在瀏覽時保護你的隱私！"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers."
+    "message": "Ghostery 正在其追蹤中制止追蹤器，並防止你被分析和你的個人資料被賣給資料仲介。"
+  },
+  "ghostery_paused": {
+    "message": "Ghostery paused"
   },
   "ghostery_privacy_policy": {
-    "message": "Ghostery Privacy Policy"
+    "message": "Ghostery 隱私權政策"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Ghostery 設定"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghostery 將在此網站上暫停。 你可以隨時在 Ghostery 設定中更改此設定，制止追蹤器和廣告在網路中追蹤你"
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery will be paused on this site for 1 day"
+    "message": "Ghostery 將在此網站上暫停 1 天"
   },
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery will be paused on this site for 1 hour"
+    "message": "Ghostery 將在此網站上暫停 1 小時"
   },
   "hosting": {
     "message": "託管",
     "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">Ghostery’s WhoTracks.Me</a>, and I accept the <a href=\"$${1}\">Ghostery Privacy Policy</a>"
+    "message": "我同意將非個人資料傳送到 <a href=\"$${0}\">Ghostery 的 WhoTracks.Me</a>，而且我接受 <a href=\"$${1}\">Ghostery 隱私權政策< /a>"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send non-personal information to WhoTracks.Me. The input enables Ghostery to provide real-time intel on trackers which in turn provides protection to the entire Ghostery community."
+    "message": "它的存在要歸功於每位選擇將非個人資料傳送到 WhoTracks.Me 的 Ghostery 用戶的微小貢獻。 這些資料的輸入使 Ghostery 能夠提供有關追蹤器的即時情報，進而為整個 Ghostery 社群提供保護。"
   },
   "learn_more": {
     "message": "瞭解更多"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
-    "message": "Let Ghostery be your complete privacy advocate and reject all popups and tracking for you, or do it yourself!"
+    "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
   },
 	"manifest_name": {
     "message": "Ghostery – 隱私廣告攔截器"
@@ -209,17 +212,17 @@
     "message": "Ghostery是一個強效的隱私擴增功能。攔截廣告、制止追蹤器及加快網頁運行。"
   },
   "menu": {
-    "message": "Menu"
+    "message": "選單"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "請注意，並非所有列出的實體都是追蹤器，並非所有實體都收集個人資料"
   },
   "miscellaneous": {
     "message": "各種各樣的",
     "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
-    "message": "More information on $${0} methodology in Ghostery’s Manifesto."
+    "message": "更多有關 Ghostery 宣言中 $${0} 方法的資訊。"
   },
   "my_account": {
     "message": "我的帳號"
@@ -228,52 +231,55 @@
     "message": "Never-Consent"
   },
   "never_consent_is_disabled": {
-    "message": "Never-Consent is Disabled"
+    "message": "Never-Consent 已停用"
   },
   "never_consent_is_enabled": {
-    "message": "Never-Consent is Enabled"
+    "message": "Never-Consent 已啟用"
   },
   "no": {
     "message": "否"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "未偵測到追蹤器"
   },
   "off": {
     "message": "關閉"
   },
   "ok": {
-    "message": "OK"
+    "message": "好的"
   },
   "ok__i_understand": {
-    "message": "Ok, I understand"
+    "message": "好的，我了解了"
   },
   "on": {
     "message": "啟動"
   },
   "on_all_websites": {
-    "message": "on all websites"
+    "message": "在所有網站上"
   },
   "on_this_website": {
-    "message": "on this website"
+    "message": "在此網站上"
+  },
+  "pause_on_this_site": {
+    "message": "Pause on this site"
   },
   "paused": {
-    "message": "Paused"
+    "message": "暫停"
   },
   "permission_required": {
-    "message": "Permission required"
+    "message": "需要權限"
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "隱私權政策"
   },
   "privacy_policy___panel_company": {
     "message": "隐私政策"
   },
   "privacy_protection": {
-    "message": "Privacy protection"
+    "message": "隱私權保護"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.Me"
+    "message": "在 WhoTracks.Me 上繼續閱讀"
   },
   "report_a_broken_page": {
     "message": "報告已損毀的網頁"
@@ -282,7 +288,7 @@
     "message": "恢復"
   },
   "search_website___": {
-    "message": "Search website..."
+    "message": "搜尋網站......"
   },
   "settings": {
     "message": "設定"
@@ -308,35 +314,35 @@
     "message": "提交一個新的網頁跟蹤器"
   },
   "telemetry": {
-    "message": "Telemetry",
+    "message": "遙測",
     "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "The Ghostery Browser Extension is installed in your browser but Ghosty is taking a light nap."
+    "message": "Ghostery 瀏覽器擴充功能已安裝在你的瀏覽器中，但 Ghosty 正在小睡片刻。"
   },
   "tired_of_cookie_popups_": {
-    "message": "TIRED OF COOKIE POPUPS?"
+    "message": "厭倦了 Cookie 彈出式視窗？"
   },
   "trackers": {
     "message": "網頁跟蹤器"
   },
   "trackers_count": {
-    "message": "Trackers Count"
+    "message": "追蹤器計數"
   },
   "trackers_detected": {
-    "message": "Trackers detected"
+    "message": "偵測到追踪器"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Trackers detected by Ghostery on this website:&nbsp;$${0}"
+    "message": "Ghostery 在此網站上偵測到的追蹤器：$${0}"
   },
   "trackers_preview": {
-    "message": "Trackers Preview"
+    "message": "追蹤器預覽"
   },
   "trackers_wheel": {
-    "message": "Trackers Wheel"
+    "message": "追踪器輪盤"
   },
   "try_to_open_this_panel_on_a_different_browser_tab": {
-    "message": "Try to open this panel on a different browser tab"
+    "message": "試著在不同的瀏覽器標籤上打開此面板"
   },
   "unblocked": {
     "message": "已解封"
@@ -346,48 +352,45 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
-  },
-  "website__@_0__": {
-    "message": "Website ($${0})"
+    "message": "網站"
   },
   "websites": {
-    "message": "Websites"
+    "message": "網站"
   },
   "welcome_to_ghostery": {
-    "message": "Welcome to Ghostery"
+    "message": "歡迎來到 Ghostery"
   },
   "what_is_whotracks_me_": {
     "message": "什么是 WhoTracks.Me？"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me, operated by Ghostery, is an integral part of Ghostery’s AI anti-tracking technology. It is a comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.Me 由 Ghostery 營運，是 Ghostery 人工智慧反追蹤技術不可或缺的一部分。 它是有關追蹤器的綜合性全球資源，使網路追蹤透明化。"
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "WhoTracks.Me 統計報告"
   },
   "whotracks_me_wheel": {
-    "message": "WhoTracks.Me Wheel"
+    "message": "WhoTracks.Me 輪盤"
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browse the web safer, faster and with less annoying ads."
+    "message": "啟用 Ghostery 後，你即刻可以更安全、更快速地瀏覽網路，並減少惱人的廣告。"
   },
   "yes": {
     "message": "是"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
-    "message": "You can always change these settings in the&nbsp;<strong>Ghostery control panel</strong>."
+    "message": "你可以隨時在 <strong>Ghostery 控制面板</strong>中更改這些設定。"
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery panel."
+    "message": "你可以隨時改變主意並啟用 Ghostery，以在 Ghostery 面板中開始追蹤追蹤器。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
-    "message": "You chose to skip enabling Ghostery!"
+    "message": "你選擇跳過啟用 Ghostery！"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "You're all set, Ghosterian!"
+    "message": "一切準備就緒，Ghosterian！"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "你將不會再在搜尋結果旁邊看到追蹤器輪盤。"
   }
 }
